@@ -43,6 +43,7 @@ systemd System and Service Manager
  	- update French translation;
  * tests:
  	- remove “test-resolve” test;
+ 	- remove “test-bus-kernel” test;
  * build:
  	- remove USER_BUSNAMES_TARGET_WANTS unit path;
  	- remove BUSNAMES_TARGET_WANTS unit path;
